base/app/backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: karansdoc/todoproject:backend
          ports:
            - containerPort: 8000  # Update if your app uses a different port
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
